--- a/Ranking/Makefile
+++ b/Ranking/Makefile
@@ -5,7 +5,7 @@ JAVAC = javac
 JAVAFLAGS = -O -d classes -encoding utf-8 -cp "*"
 
 start:
-	javac CombineHashmaps.java
+	javac CombineHashMaps.java
 	javac RankingNp.java
 
 nounsearch:
@@ -13,48 +13,48 @@ nounsearch:
 	make nounsearch
 
 hashmap:
-	java CombineHashmaps output1.txt output2.txt hashmap1.txt
-	java CombineHashmaps hashmap1.txt output3.txt hashmap2.txt
-	java CombineHashmaps hashmap2.txt output4.txt hashmap3.txt
-	java CombineHashmaps hashmap3.txt output5.txt hashmap4.txt
-	java CombineHashmaps hashmap4.txt output6.txt hashmap5.txt
-	java CombineHashmaps hashmap5.txt output7.txt hashmap1.txt
-	java CombineHashmaps hashmap1.txt output8.txt hashmap2.txt
-	java CombineHashmaps hashmap2.txt output9.txt hashmap3.txt
-	java CombineHashmaps hashmap3.txt output10.txt hashmap4.txt
-	java CombineHashmaps hashmap4.txt output11.txt hashmap5.txt
-	java CombineHashmaps hashmap5.txt output12.txt hashmap1.txt
-	java CombineHashmaps hashmap1.txt output13.txt hashmap2.txt
-	java CombineHashmaps hashmap2.txt output14.txt hashmap3.txt
-	java CombineHashmaps hashmap3.txt output15.txt hashmap4.txt
-	java CombineHashmaps hashmap4.txt output16.txt hashmap5.txt
-	java CombineHashmaps hashmap5.txt output17.txt hashmap1.txt
-	java CombineHashmaps hashmap1.txt output18.txt hashmap2.txt
-	java CombineHashmaps hashmap2.txt output19.txt hashmap3.txt
-	java CombineHashmaps hashmap3.txt output20.txt hashmap4.txt
-	java CombineHashmaps hashmap4.txt output21.txt hashmap5.txt
-	java CombineHashmaps hashmap5.txt output22.txt hashmap1.txt
-	java CombineHashmaps hashmap1.txt output23.txt hashmap2.txt
-	java CombineHashmaps hashmap2.txt output24.txt hashmap3.txt
-	java CombineHashmaps hashmap3.txt output25.txt hashmap4.txt
-	java CombineHashmaps hashmap4.txt output26.txt hashmap5.txt
-	java CombineHashmaps hashmap5.txt output27.txt hashmap1.txt
-	java CombineHashmaps hashmap1.txt output28.txt hashmap2.txt
-	java CombineHashmaps hashmap2.txt output29.txt hashmap3.txt
-	java CombineHashmaps hashmap3.txt output30.txt hashmap4.txt
-	java CombineHashmaps hashmap4.txt output31.txt hashmap5.txt
-	java CombineHashmaps hashmap5.txt output32.txt hashmap1.txt
-	java CombineHashmaps hashmap1.txt output33.txt hashmap2.txt
-	java CombineHashmaps hashmap2.txt output34.txt hashmap3.txt
-	java CombineHashmaps hashmap3.txt output35.txt hashmap4.txt
-	java CombineHashmaps hashmap4.txt output36.txt hashmap5.txt
-	java CombineHashmaps hashmap5.txt output37.txt hashmap1.txt
-	java CombineHashmaps hashmap1.txt output38.txt hashmap2.txt
-	java CombineHashmaps hashmap2.txt output39.txt hashmap3.txt
-	java CombineHashmaps hashmap3.txt output40.txt hashmap4.txt
-	java CombineHashmaps hashmap4.txt output41.txt hashmap5.txt
-	java CombineHashmaps hashmap5.txt output42.txt hashmap1.txt
-	java CombineHashmaps hashmap1.txt output43.txt overall_hashmap.txt
+	java CombineHashMaps output1.txt output2.txt hashmap1.txt
+	java CombineHashMaps hashmap1.txt output3.txt hashmap2.txt
+	java CombineHashMaps hashmap2.txt output4.txt hashmap3.txt
+	java CombineHashMaps hashmap3.txt output5.txt hashmap4.txt
+	java CombineHashMaps hashmap4.txt output6.txt hashmap5.txt
+	java CombineHashMaps hashmap5.txt output7.txt hashmap1.txt
+	java CombineHashMaps hashmap1.txt output8.txt hashmap2.txt
+	java CombineHashMaps hashmap2.txt output9.txt hashmap3.txt
+	java CombineHashMaps hashmap3.txt output10.txt hashmap4.txt
+	java CombineHashMaps hashmap4.txt output11.txt hashmap5.txt
+	java CombineHashMaps hashmap5.txt output12.txt hashmap1.txt
+	java CombineHashMaps hashmap1.txt output13.txt hashmap2.txt
+	java CombineHashMaps hashmap2.txt output14.txt hashmap3.txt
+	java CombineHashMaps hashmap3.txt output15.txt hashmap4.txt
+	java CombineHashMaps hashmap4.txt output16.txt hashmap5.txt
+	java CombineHashMaps hashmap5.txt output17.txt hashmap1.txt
+	java CombineHashMaps hashmap1.txt output18.txt hashmap2.txt
+	java CombineHashMaps hashmap2.txt output19.txt hashmap3.txt
+	java CombineHashMaps hashmap3.txt output20.txt hashmap4.txt
+	java CombineHashMaps hashmap4.txt output21.txt hashmap5.txt
+	java CombineHashMaps hashmap5.txt output22.txt hashmap1.txt
+	java CombineHashMaps hashmap1.txt output23.txt hashmap2.txt
+	java CombineHashMaps hashmap2.txt output24.txt hashmap3.txt
+	java CombineHashMaps hashmap3.txt output25.txt hashmap4.txt
+	java CombineHashMaps hashmap4.txt output26.txt hashmap5.txt
+	java CombineHashMaps hashmap5.txt output27.txt hashmap1.txt
+	java CombineHashMaps hashmap1.txt output28.txt hashmap2.txt
+	java CombineHashMaps hashmap2.txt output29.txt hashmap3.txt
+	java CombineHashMaps hashmap3.txt output30.txt hashmap4.txt
+	java CombineHashMaps hashmap4.txt output31.txt hashmap5.txt
+	java CombineHashMaps hashmap5.txt output32.txt hashmap1.txt
+	java CombineHashMaps hashmap1.txt output33.txt hashmap2.txt
+	java CombineHashMaps hashmap2.txt output34.txt hashmap3.txt
+	java CombineHashMaps hashmap3.txt output35.txt hashmap4.txt
+	java CombineHashMaps hashmap4.txt output36.txt hashmap5.txt
+	java CombineHashMaps hashmap5.txt output37.txt hashmap1.txt
+	java CombineHashMaps hashmap1.txt output38.txt hashmap2.txt
+	java CombineHashMaps hashmap2.txt output39.txt hashmap3.txt
+	java CombineHashMaps hashmap3.txt output40.txt hashmap4.txt
+	java CombineHashMaps hashmap4.txt output41.txt hashmap5.txt
+	java CombineHashMaps hashmap5.txt output42.txt hashmap1.txt
+	java CombineHashMaps hashmap1.txt output43.txt overall_hashmap.txt
 
 ranking:
 	java RankingNp overall_hashmap.txt ranking.txt termhood.txt
